Fix sidebar sticky positioning to prevent menu overlap
Increased the sticky top offset from 2em to 5em in _utilities.scss to ensure the sidebar stays below the fixed navigation menu. Removed redundant sticky positioning from _sidebar.scss since it's already handled by the .sticky utility class.

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -18,10 +18,6 @@
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 80px;
-    align-self: flex-start;
 
     &:hover {
       opacity: 1;
